force-app/main/default/objects/LibraWS__c/fields/param_alias__c.field-meta.xml
<CustomField>
    <fullName>param_alias__c</fullName>
    <label>param alias</label>
    <length>80</length>
    <type>Text</type>
</CustomField>