force-app/main/default/objects/LibraWS__c/fields/param_id_user__c.field-meta.xml
<CustomField>
    <fullName>param_id_user__c</fullName>
    <label>param id user</label>
    <length>80</length>
    <type>Text</type>
</CustomField>