force-app/main/default/objects/LibraWS__c/fields/param_pwd__c.field-meta.xml
<CustomField>
    <fullName>param_pwd__c</fullName>
    <label>param pwd</label>
    <length>80</length>
    <type>Text</type>
</CustomField>